# paktool

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  paktool.cppcheck  vcpkg.json  version.cmake
.github/workflows/: release.yml
cli/: CMakeLists.txt  main.cpp  paktoolver.h  readme.md
src/: CMakeLists.txt  pack.h
src/impl/: fs_pack.cpp  fs_pack.h  grp_pack.cpp  grp_pack.h  pack.cpp  pak_pack.cpp  pak_pack.h  pakutil.h  pk3_pack.cpp  pk3_pack.h
