cmake_minimum_required(VERSION 3.12)
project(paktool VERSION 1.0)
set(CMAKE_CXX_STANDARD 20)

if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    add_compile_options(-Wall -Wextra -Wpedantic -Wno-parentheses)
    if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 13.0)
        message(FATAL_ERROR "GCC version must be at least 13.0")
    endif()
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    add_compile_options(-Wall -Wextra -Wpedantic -Wno-unqualified-std-cast-call -Wno-logical-op-parentheses -Wno-switch)
    if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 16.0)
        message(FATAL_ERROR "Clang version must be at least 16.0")
    endif()
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    add_compile_options(/W4)
    if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 16.11)
        message(FATAL_ERROR "MSVC version must be at least 16.11")
    endif()
endif()

add_compile_definitions(PRIVATE $<$<CONFIG:Debug>:_DEBUG=1>)

add_subdirectory(src)
add_subdirectory(cli)

if (EXISTS "/etc/debian_version")
    set(CPACK_GENERATOR "DEB")
    set(CPACK_DEBIAN_PACKAGE_MAINTAINER "skalleAnka")
    set(CPACK_DEBIAN_PACKAGE_DEPENDS "libminizip1 (>= 1.1-8), libboost-program-options1.74.0, libboost-locale1.74.0, libboost-atomic1.74.0, libboost-chrono1.74.0, libboost-system1.74.0, libboost-thread1.74.0, libboost-date-time1.74.0, libicu72")
elseif (WIN32)
    set(CPACK_GENERATOR "WIX")
    set(CPACK_WIX_PRODUCT_GUID "d8030dd3-61c2-45f9-9a1f-7e116e817f34")
    set(CPACK_WIX_UPGRADE_GUID "a4a2f4c6-628e-4357-901a-ecf18fe586e6")
elseif (UNIX AND NOT APPLE)
    set(CPACK_GENERATOR "TGZ")
else()
    set(CPACK_GENERATOR "ZIP")
endif()

set(CPACK_PACKAGE_NAME "paktool")
set(CPACK_PACKAGE_VERSION "1.0.0")
set(CPACK_PACKAGE_DESCRIPTION "Tool for converting and extracting .pak and .pk3 used by Quake engines.")
set(CPACK_PACKAGE_CONTACT "thisemailis@fa.ke")

include(CPack)